<resources>
    <string name="app_name">玩安卓</string>
    <string name="title_home">首页</string>
    <string name="title_project">项目</string>
    <string name="title_navigator">导航</string>
    <string name="title_profile">我的</string>
    <string name="title_group">公众号</string>
    <string name="home_tab_recommended">推荐</string>
    <string name="home_tab_square">广场</string>
    <string name="home_tab_answer">问答</string>
    <string name="title_search">搜索</string>

    <string name="article_tag_top">置顶</string>
    <string name="article_tag_new">新</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="hello_i_am_a_textview">Hello, I am a TextView</string>
    <string name="empty_data_tips">暂无数据</string>
    <string name="retry">重试</string>
    <string name="item_footer_not_more">没有更多数据了</string>
    <string name="title_activity_web">WebActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="collect">收藏</string>
    <string name="search_hint">搜索关键词</string>
    <string name="profile_user_name">用户名: %s</string>
    <string name="profile_user_id">id: %s</string>
    <string name="profile_user_coin_and_rank">积分: %s 等级: %s 排名: %s</string>
    <string name="user_coin_level">等级: %s</string>
    <string name="user_coin_rank">排名: %s</string>
    <string name="not_login">未登录</string>

    <string name="search_hotkey_title">搜索热词</string>
    <string name="search_history_title">搜索历史</string>

    <string name="profile_item_title_message">消息中心</string>
    <string name="profile_item_title_share">分享文章</string>
    <string name="profile_item_title_favorite">收藏文章</string>
    <string name="profile_item_title_tools">工具列表</string>
    <string name="profile_item_title_quit">退出登录</string>

    <string name="login">登录</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="logout">退出登录</string>
    <string name="register_success">注册成功！</string>
    <string name="account_need_login">请先登录！</string>

    <string name="content_description_coin_rules">积分规则</string>
    <string name="content_description_coin_ranking">积分排行榜</string>

    <string name="share_count_description">分享了%s篇文章</string>
    <string name="classify_chapter_name">分类·%s</string>
    <string name="author_name">作者·%s</string>


</resources>